Tring to fix background on ios

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10,6 +10,7 @@ body
   min-height: 100%;
   max-height: 100%;
   width: 100%;
+  height: 100vh;
   background-size: cover;
   background-attachment: fixed;
   z-index: -3;
